--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,16 @@
 {
+    "require" : {
+        "apigen/apigen":"4.1.2"
+    },
     "require-dev":{
             "phpunit/phpunit":"5.3.2"
     },
         "autoload":{
-        "psr-4":{
-            "ProyectoScrum\\Modelo\\":"Modelo/",
-            "ProyectoScrum\\Vista\\":"Vista/"
-        }
+            "psr-4":{
+                "ProyectoScrum\\Modelo\\":"Modelo/",
+                "ProyectoScrum\\Vista\\":"Vista/",
+                "ProyectoScrum\\Controlador\\" : "Controlador/",
+                "ProyectoScrum\\DatosServer\\" : "DatosServer"
+            }
     }
 }
